--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="card" id="entete">
       <h1>Bonjour, je suis Franck Megret</h1>
-      <img src="/images/franck.JPG" width="100px" alt="Megret Franck" class="img-circle">
+      <img src="/images/franck.jpg" width="100px" alt="Megret Franck" class="img-circle">
       <p>je suis passioné par le WebDev et l'infographie 3D</p>
       <a href="www.lewagon.fr" target="_blank" class="btn">Le Wagon</a>
     </div>
@@ -26,8 +26,8 @@
         Infographie 3D
       </h2>
       <img src="/images/robot.jpg" alt="robot" class="image">
-      <img src="/images/montre-homme.jpg" alt="montre" class="image">
-      <img src="/images/montre-femme.jpg" alt="montre" class="image">
+      <img src="/images/montrehomme.jpg" alt="montre" class="image">
+      <img src="/images/montrefemme.jpg" alt="montre" class="image">
     </div>
     <div class="card">
       <h3>Suivez moi</h3>
