modify upcase name

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="container">
     <div class="card" id="entete">
-      <h1>Bonjour, je suis Franck Megret</h1>
+      <h1>Bonjour, je suis Franck MEGRET</h1>
       <img src="images/franck.jpg" width="100px" alt="Megret Franck" class="img-circle">
       <p>je suis passioné par le WebDev et l'infographie 3D</p>
       <a href="www.lewagon.fr" target="_blank" class="btn">Le Wagon</a>
