--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h1>Bonjour, je suis Franck MEGRET</h1>
       <img src="images/franck.jpg" width="100px" alt="Megret Franck" class="img-circle">
       <p>je suis passioné par le WebDev et l'infographie 3D</p>
-      <a href="www.lewagon.com" target="_blank" class="btn">Le Wagon</a>
+      <a href="https://www.lewagon.com/" target="_blank" class="btn">Le Wagon</a>
     </div>
     <div class="card">
       <h2>
