add data and webdev

--- a/index.html
+++ b/index.html
@@ -17,10 +17,22 @@
 <body>
   <div class="container">
     <div class="card" id="entete">
-      <h1>Bonjour, je suis Franck MEGRET</h1>
+      <h1>Bonjour et bienvenue sur ma fiche, je suis Franck MEGRET</h1>
       <img src="images/franck.jpg" width="100px" alt="Megret Franck" class="img-circle">
-      <p>je suis passioné par le WebDev et l'infographie 3D</p>
-      <a href="https://www.lewagon.com/" target="_blank" class="btn">Le Wagon</a>
+      <p>Passionné par la Tech depuis mon plus jeune âge, j'ai toujours évolué dans un milieu technique / informatique,
+      n'hésitant pas à dépasser mes fonctions pour résoudre les problèmes Tech des entreprises où j'ai évolué.
+      Je suis aussi passionné et autodidacte en infographie 3D</p>
+    </div>
+    <div class="card" id="data">
+      <h2>Data Science</h2>
+      <p>En reconversion professionnelle en 2022 suite à une maladie m'empêchant de travailler debout toute la journée,
+        j'ai suivi une formation intensive au wagon à Lausanne, spécialisées dans la Data-Science.</p>
+      <a href="https://www.lewagon.com/data-science-course/full-time" target="_blank" class="btn">Le Wagon</a>
+    </div>
+    <div class="card" id="webdev">
+      <h2>WebDev fullsatck</h2>
+      <p>j'ai ensuite suivi une formation intensive au wagon à Lausanne, spécialisées dans le Développement Web.</p>
+      <a href="https://www.lewagon.com/web-development-course/full-time" target="_blank" class="btn">Le Wagon</a>
     </div>
     <div class="card">
       <h2>
