add data and webdev

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <div class="card" id="data">
       <h2>Data Science</h2>
       <p>En reconversion professionnelle en 2022 suite à une maladie m'empêchant de travailler debout toute la journée,
-        j'ai suivi une formation intensive au wagon à Lausanne, spécialisées dans la Data-Science.</p>
+        j'ai suivi une formation intensive au wagon à Lausanne, spécialisée dans la Data-Science.</p>
       <a href="https://www.lewagon.com/data-science-course/full-time" target="_blank" class="btn">Le Wagon</a>
     </div>
     <div class="card" id="webdev">
       <h2>WebDev fullsatck</h2>
-      <p>j'ai ensuite suivi une formation intensive au wagon à Lausanne, spécialisées dans le Développement Web.</p>
+      <p>j'ai ensuite suivi une formation intensive au wagon à Lausanne, spécialisée dans le Développement Web.</p>
       <a href="https://www.lewagon.com/web-development-course/full-time" target="_blank" class="btn">Le Wagon</a>
     </div>
     <div class="card">
